--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,15 +129,21 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item) do %>
         <div class='item-img-content'>
-          <%= image_tag "item-sample.png", class: "item-img" %>
-
+          <% if item.image.attached? %>
+          <%= image_tag item.image.variant(resize: "200x200"), class: "item-img" %>
+        <% else %>
+            <p>画像がありません</p>
+              <% end %>
+            </div>
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
+        <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
@@ -153,8 +159,8 @@
             </div>
           </div>
         </div>
-        <% end %>
       </li>
+       <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
@@ -181,8 +187,8 @@
     </ul>
   </div>
   <%# /商品一覧 %>
-</div>
-<%= link_to('#', class: 'purchase-btn') do %>
+ </div>
+ <%= link_to('#', class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>出品する</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
