--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,7 +131,7 @@
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to item_path(item) do %>
+        <%= link_to items_path(item) do %>
         <div class='item-img-content'>
           <% if item.image.attached? %>
           <%= image_tag item.image.variant(resize: "200x200"), class: "item-img" %>
@@ -140,9 +140,9 @@
               <% end %>
             </div>
           <%# 商品が売れていればsold outを表示しましょう %>
-          <div class='sold-out'>
-            <span>Sold Out!!</span>
-          </div>
+          <%# <div class='sold-out'> %>
+            <%# <span>Sold Out!!</span> %>
+          <%# </div> %>
         <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
 
