--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,15 +129,13 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <% @items.each do |item| %>
+      <%# @items.each do |item| %>
       <li class='list'>
-        <%= link_to items_path(item) do %>
+        <%= link_to "#" do %>
         <div class='item-img-content'>
-          <% if item.image.attached? %>
-          <%= image_tag item.image.variant(resize: "200x200"), class: "item-img" %>
-        <% else %>
-            <p>画像がありません</p>
-              <% end %>
+        
+          <%= image_tag "item-sample.png", class: "item-img" %>
+
             </div>
           <%# 商品が売れていればsold outを表示しましょう %>
           <%# <div class='sold-out'> %>
@@ -160,7 +158,7 @@
           </div>
         </div>
       </li>
-       <% end %>
+       <%# end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
@@ -188,7 +186,7 @@
   </div>
   <%# /商品一覧 %>
  </div>
- <%= link_to(new_item_path, class: 'purchase-btn') do %>
+ <%= link_to('#', class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>出品する</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
