--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -136,15 +136,16 @@
         
           <%= image_tag "item-sample.png", class: "item-img" %>
 
-            </div>
+          
           <%# 商品が売れていればsold outを表示しましょう %>
           <%# <div class='sold-out'> %>
             <%# <span>Sold Out!!</span> %>
           <%# </div> %>
-        <% end %>
+
           <%# //商品が売れていればsold outを表示しましょう %>
 
         </div>
+        <% end %>
         <div class='item-info'>
           <h3 class='item-name'>
             <%= "商品名" %>
@@ -186,7 +187,7 @@
   </div>
   <%# /商品一覧 %>
  </div>
- <%= link_to('#', class: 'purchase-btn') do %>
+ <%= link_to(new_item_path, class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>出品する</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
