--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,29 +129,27 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <%# @items.each do |item| %>
+      <% @items.each do |item| %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to "#"  do %>
         <div class='item-img-content'>
-        
-          <%= image_tag "item-sample.png", class: "item-img" %>
+          <%= image_tag item.image.attached? ? item.image : "item-sample.png", class: "item-img" %>
 
           
           <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <div class='sold-out'> %>
-            <%# <span>Sold Out!!</span> %>
-          <%# </div> %>
-
+          <%# <div class='sold-out'>  %>
+             <%# <span>Sold Out!!</span>  %>
+          <%# </div>  %>
+         
           <%# //商品が売れていればsold outを表示しましょう %>
-
         </div>
-        <% end %>
+      
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= "商品名" %>
+            <%= item.name %>
           </h3>
           <div class='item-price'>
-            <span><%= "販売価格" %>円<br><%= '配送料負担' %></span>
+            <span><%= item.price %>円<br><%= item.shipping_fee_id == 1 ? '送料込み' : '着払い' %></span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
@@ -159,7 +157,7 @@
           </div>
         </div>
       </li>
-       <%# end %>
+       <%end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
@@ -181,6 +179,7 @@
         </div>
         <% end %>
       </li>
+      <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
