--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,7 +128,7 @@
     </div>
     <ul class='item-lists'>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% if @items.any? %> 
       <% @items.each do |item| %>
       <li class='list'>
         <%= link_to "#"  do %>
@@ -156,11 +156,12 @@
             </div>
           </div>
         </div>
+        <% end %>
       </li>
        <%end %>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+     
 
-      <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      <% else %>
       <%# 商品がある場合は表示されないようにしましょう %>
       <li class='list'>
         <%= link_to '#' do %>
@@ -181,7 +182,7 @@
       </li>
       <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
+      
     </ul>
   </div>
   <%# /商品一覧 %>
