--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -137,10 +137,11 @@
 
           
           <%# 商品が売れていればsold outを表示しましょう %>
-          <%# <div class='sold-out'>  %>
-             <%# <span>Sold Out!!</span>  %>
-          <%# </div>  %>
-         
+         <% if item.order %>
+          <div class='sold-out'> 
+             <span>Sold Out!!</span> 
+          </div>  
+         <% end %>
           <%# //商品が売れていればsold outを表示しましょう %>
         </div>
       
