--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -25,6 +25,11 @@
 
     
 <% if user_signed_in? %>
+<% if @item.order.present? %>
+<div class='sold-out'> 
+             <span>Sold Out!!</span> 
+          </div> 
+          <% else %> 
   <% if current_user == @item.user %> 
      <%= link_to "商品の編集", edit_item_path, method: :get, class: "item-red-btn" %>
       <p class="or-text">or</p>
@@ -32,6 +37,7 @@
       <% else %>
       <%= link_to "購入画面に進む",item_orders_path(@item), data: { turbo: false },class:"item-red-btn"%>
     <% end %>
+  <% end %>
   <% end %>
 
     
